@@ -1,3 +1,10 @@
+2011-09-11  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/menucmd.c: Replaced gnome.h by glib/gi18n.h for the
+	definition of the function '_'
+	(about_box): Cast widget to GTK_WINDOW
+	(new_project): Use GtkEntry instead of GnomeEntry
+
 2011-08-17  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/idle-dialog.c: Replaced gnome.h by glib/gi18n.h for the
